# ureadahead

./: Makefile.am  Makefile.in  TODO  config.h.template  configure  configure.ac  meson.build
debian/: changelog  control  rules  sreadahead.postinst  sreadahead.postrm  sreadahead.preinst  ureadahead.dirs  ureadahead.install  ureadahead.maintscript
m4/: Makefile.in
nih/: Makefile.in
po/: POTFILES.in  ureadahead.pot
src/: Makefile.am  Makefile.in  meson.build  pack.c  trace.c  trace.h  ureadahead.c
